# video_transcoder

./: .gitignore  CMakeLists.txt  readme.md
AAA_Readme/: README.md
include/: audio_decoder.h  audio_encoder.h  audio_processor.h  demuxer.h  muxer.h  queue.h  video_decoder.h  video_encoder.h  video_processor.h
media/: output_2.0x.avi  output_2x_rotation.avi  output_3.0x.avi  output_3x_rotation.avi
src/: Transcoder.cpp  audio_decoder.cpp  audio_encoder.cpp  audio_processor.cpp  demuxer.cpp  muxer.cpp  queue.cpp  video_decoder.cpp  video_encoder.cpp  video_processor.cpp
